portainer/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pantheon.anagno.dev
  namespace: pantheon
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pantheon.anagno.dev
    external-dns.alpha.kubernetes.io/target: zh.anagno.dev
    kubernetes.io/ingressClassName: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pantheon.anagno.dev`)
      kind: Rule
      services:
        - name: portainer
          port: 9000
      middlewares:
      - name: security-headers
        namespace: proxy
  tls:
    secretName: pantheon.anagno.dev
    options:
      name: tls-security-headers
      namespace: proxy
